force-app/main/default/objects/Master_Framework_Lot__c/Master_Framework_Lot__c.object-meta.xml
<CustomObject>
    <description>Object to hold information regarding Framework Lots</description>
    <label>Framework Lot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Framework Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>