force-app/main/default/objects/Master_Framework_Lot__c/fields/CB_vs_pre_defined_period__c.field-meta.xml
<CustomField>
    <fullName>CB_vs_pre_defined_period__c</fullName>
    <label>Lot CB vs. pre-defined period</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>