force-app/main/default/objects/Master_Framework_Lot__c/fields/CB_vs_previous_year__c.field-meta.xml
<CustomField>
    <fullName>CB_vs_previous_year__c</fullName>
    <label>Lot CB vs. previous year</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>