force-app/main/default/objects/Master_Framework_Lot__c/fields/Commission_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculation__c</fullName>
    <description>to set whether the framework  levy is percentage calculater or from supplier MI</description>
    <label>Commission Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <label>Flat Rate Percentage</label>
            </value>
            <value>
                <fullName>Variable Percentage</fullName>
            </value>
            <value>
                <fullName>Supplier Generated</fullName>
            </value>
            <value>
                <fullName>Not Calculated</fullName>
            </value>
            <value>
                <fullName>No Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>