force-app/main/default/objects/Master_Framework_Lot__c/fields/Commission_Calculation_Details__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculation_Details__c</fullName>
    <inlineHelpText>Used to record information about non-standard commission calculations</inlineHelpText>
    <label>Commission Calculation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>