force-app/main/default/objects/Master_Framework_Lot__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>shows the commission rate finance applies to the spend through MISO</description>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>