force-app/main/default/objects/Master_Framework_Lot__c/fields/E_F_Threshold_Score__c.field-meta.xml
<CustomField>
    <fullName>E_F_Threshold_Score__c</fullName>
    <description>US0453</description>
    <inlineHelpText>Economic and Financial Standing (D&amp;B Financial Failure) 
threshold score</inlineHelpText>
    <label>E&amp;F Threshold Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>