force-app/main/default/objects/Master_Framework_Lot__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>each lot on a framework may have a different date</description>
    <inlineHelpText>Lot end date. Shown on website</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>