force-app/main/default/objects/Master_Framework_Lot__c/fields/Final_Call_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Call_off_Date__c</fullName>
    <description>additional field to collect useful data</description>
    <label>Final Call-off Date</label>
    <type>Date</type>
</CustomField>