force-app/main/default/objects/Master_Framework_Lot__c/fields/Final_Data_Expected__c.field-meta.xml
<CustomField>
    <fullName>Final_Data_Expected__c</fullName>
    <description>additional field to collect useful data</description>
    <label>Final Data Expected</label>
    <type>Date</type>
</CustomField>