force-app/main/default/objects/Master_Framework_Lot__c/fields/Hide_Lot_Suppliers_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Hide_Lot_Suppliers_from_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US0682</description>
    <inlineHelpText>Selecting this checkbox will prevent the lot suppliers from showing on the Website.</inlineHelpText>
    <label>Hide Lot Suppliers from Website</label>
    <type>Checkbox</type>
</CustomField>