force-app/main/default/objects/Master_Framework_Lot__c/fields/Hide_this_Lot_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Hide_this_Lot_from_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US0687</description>
    <inlineHelpText>Selecting this checkbox will prevent the framework lot from showing on the Website.</inlineHelpText>
    <label>Hide this Lot from Website</label>
    <type>Checkbox</type>
</CustomField>