force-app/main/default/objects/Master_Framework_Lot__c/fields/Include_in_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Related_List__c</fullName>
    <formula>OR (
              
                  AND (Master_Framework_Lot_Number__c != &apos;0&apos;,
                  Name != &apos;Nil Return&apos;) ,
                  AND(
                 OR(
                  $Profile.Id = &apos;00eb0000000IfPP&apos;,
                  $Profile.Id = &apos;00eb0000000EgD5&apos;
                  ),
                  AND (Master_Framework_Lot_Number__c = &apos;0&apos;,
                  Name = &apos;Nil Return&apos;) 
                  
                  )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Related List</label>
    <type>Checkbox</type>
</CustomField>