force-app/main/default/objects/Master_Framework_Lot__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <inlineHelpText>This is the name of the lot, but the website displays the content of the &apos;Name&apos; field above.</inlineHelpText>
    <label>Name (long)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>