force-app/main/default/objects/Master_Framework_Lot__c/fields/Master_Framework__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework__c</fullName>
    <description>Holds reference to Master Framework</description>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Framework Lots</relationshipLabel>
    <relationshipName>Framework_Lots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>