force-app/main/default/objects/Master_Framework_Lot__c/fields/Master_Framework_Lot_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_External_Id__c</fullName>
    <description>External Id (Not generated by Salesforce) to allow external reference numbers to be used for data migration</description>
    <externalId>true</externalId>
    <label>Master Framework Lot External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>