force-app/main/default/objects/Master_Framework_Lot__c/fields/Master_Framework_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_Number__c</fullName>
    <description>Lot number field in SAFIRE</description>
    <inlineHelpText>Official number of the FW Lot.  Appears on the website</inlineHelpText>
    <label>Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>