force-app/main/default/objects/Master_Framework_Lot__c/fields/No_of_Live_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Live_Suppliers__c</fullName>
    <description>Number of associated suppliers where Status = Live</description>
    <label>No of Live Suppliers</label>
    <summaryFilterItems>
        <field>Supplier_Framework_Lot__c.Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </summaryFilterItems>
    <summaryForeignKey>Supplier_Framework_Lot__c.Master_Framework_Lot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>