force-app/main/default/objects/Master_Framework_Lot__c/fields/Nominal_Code__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Code__c</fullName>
    <description>Code to show where the Framework sits in the Finance system (CODA)</description>
    <label>Nominal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>