force-app/main/default/objects/Master_Framework_Lot__c/fields/Products_and_services__c.field-meta.xml
<CustomField>
    <fullName>Products_and_services__c</fullName>
    <label>Products and services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>