force-app/main/default/objects/Master_Framework_Lot__c/fields/Products_and_services_used_for_search__c.field-meta.xml
<CustomField>
    <fullName>Products_and_services_used_for_search__c</fullName>
    <label>Products and services (used for search)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>