force-app/main/default/objects/Master_Framework_Lot__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>each lot on a framework may have a different date</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>