force-app/main/default/objects/Master_Framework_Lot__c/fields/Restricted_Access__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Access</label>
    <type>Checkbox</type>
</CustomField>