force-app/main/default/objects/Master_Framework_Lot__c/fields/Restricted_Access_Comments__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Access_Comments__c</fullName>
    <inlineHelpText>Describes restrictions as to who the Master Framework Lot can be applied to</inlineHelpText>
    <label>Restricted Access Comments</label>
    <type>TextArea</type>
</CustomField>