force-app/main/default/objects/Master_Framework_Lot__c/fields/Review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Due_Date__c</fullName>
    <description>each lot on a framework may have a different date</description>
    <label>Review Due Date</label>
    <type>Date</type>
</CustomField>