force-app/main/default/objects/Master_Framework_Lot__c/fields/Spend_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Spend_To_Date__c</fullName>
    <label>Spend To Date</label>
    <summarizedField>Supplier_Framework_Lot__c.Spend_To_Date__c</summarizedField>
    <summaryForeignKey>Supplier_Framework_Lot__c.Master_Framework_Lot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>