force-app/main/default/objects/Master_Framework_Lot__c/fields/Spend_To_Date_Last_Upload__c.field-meta.xml
<CustomField>
    <fullName>Spend_To_Date_Last_Upload__c</fullName>
    <inlineHelpText>The date the ‘spend to date’ was last uploaded from miso</inlineHelpText>
    <label>Spend To Date Last Upload</label>
    <summarizedField>Supplier_Framework_Lot__c.Spend_To_Date_Last_Upload__c</summarizedField>
    <summaryForeignKey>Supplier_Framework_Lot__c.Master_Framework_Lot__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>