force-app/main/default/objects/Master_Framework_Lot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>* Live : Open contracts
* Expired : Closed and no more data to be received
* Expired - Data Still Received : Closed to new contracts but still receiving data</description>
    <inlineHelpText>* Live : Open contracts
* Expired : Closed and no more data to be received
* Expired - Data Still Received : Closed to new contracts but still receiving data</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Expired - Data Still Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>