force-app/main/default/objects/Master_Framework_Lot__c/fields/Sub_Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Spend_Type__c</fullName>
    <label>Sub Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Sub_Spend_Type</valueSetName>
    </valueSet>
</CustomField>