force-app/main/default/objects/Master_Framework_Lot__c/fields/Supplier_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Count__c</fullName>
    <label>Supplier Contact Count</label>
    <summaryForeignKey>Supplier_Framework_Lot__c.Master_Framework_Lot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>