force-app/main/default/objects/Master_Framework_Lot__c/validationRules/Enter_Restricted_Access_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Restricted_Access_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>Restricted_Access__c  &amp;&amp; ISBLANK( Restricted_Access_Comments__c )</errorConditionFormula>
    <errorMessage>If the Restricted Access is checked, Restricted Access Comments must be populated.</errorMessage>
</ValidationRule>