force-app/main/default/objects/Master_Framework_Lot__c/validationRules/Prevent_Change_of_Name_Field_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_of_Name_Field_Value</fullName>
    <active>true</active>
    <errorConditionFormula>( ISCHANGED( Name ) ) &amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;CCS System Administrator&quot; || $Profile.Name = &quot;CCS Business Intelligence&quot; )</errorConditionFormula>
    <errorMessage>The Name can be updated only by a user with the CCS Administrator role.</errorMessage>
</ValidationRule>